--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5fae1eca0758c53597e604b3'), 'taskId': 'taskId1f54c47a361b40f9', 'taskType': 'classification', 'imagePath': 'http://res.cloudinary.com/dbgme5zrt/image/upload/v1605246513/bn5gfdkqu8x9nysrbysd.jpg', 'example': False, 'labelId': 'labelId0cddc3725c42422b'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db = connection()\n",
-    "cursor = db.Label.aggregate([\n",
-    "    { \"$match\": { \"taskType\": \"classification\" } },\n",
-    "    { \"$sample\": { \"size\": 1 } }])\n",
+    "taskId = \"\"\n",
+    "cursor = db.Label.aggregate([{ \n",
+    "            \"$match\": {\"$or\": [{\"taskType\": \"classification\"}, {\"taskType\": \"ner\"}] }}, \n",
+    "            { \"$sample\": { \"size\": 2 } }])\n",
     "for t in cursor:\n",
     "    print(t)"
    ]
